Fix alignment issues

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,13 @@
-* {
+body {
     text-align: center;
+    /* border: 2px solid red; */
+    padding-left: 25%;
+    padding-right: 25%;
 }
+
+/* * {
+    border: 2px solid blue;
+} */
 
 p {
     color:darkgreen;
@@ -21,21 +28,23 @@ h1 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-div {
-    text-align: center;
-    /* width: 50%; */
-}
+/* div {
+    text-align: left;
+    padding-left: 33%;
+    padding-right: 33%;
+} */
 
-/* ul {
+ol,
+ul {
     display: inline-block;
-    /* text-align: left; */
-    /* list-style-position: inside;
-} */ 
+    padding-left: 10%;
+    padding-right: 10%;
+}
 
 li {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 24px;
-    text-align: center;
+    text-align: left;
 }
 
 li:not(:last-child) {
